syntax = "proto3";

package com.road.yishi.proto.army;

message AutoRecruitMsg {
  bool autoRecruit = 1;
}
