syntax = "proto3";

package com.road.yishi.proto.army;

message HeroFastKeyMsg {
  string fastKey = 1;
  bool setResult = 2;
}
