syntax = "proto3";

package com.road.yishi.proto.army;

message HeroHideFashionReqMsg {
  int32 hide = 1;
}
