syntax = "proto3";

package com.road.yishi.proto.army;

message PawnChangeMsg {
  int32 curPawnTempId = 1;
  int32 tarPawnTempId = 2;
  int32 payType = 3;
}
