syntax = "proto3";

package com.road.yishi.proto.army;

message TalentUpGradeMsg {
  bool upresult = 1;
}
