syntax = "proto3";

package com.road.yishi.proto.player;

message PlayerMsg {
  int32 playerId = 1;
  string nickName = 2;
  int32 sex = 3;
  int32 pic = 4;
  int32 camp = 5;
  int32 point = 6;
  int32 giftToken = 7;
  int32 state = 8;
  string lastAward = 9;
  int32 questSiteLen = 10;
  string questSite = 11;
  int32 consortiaId = 12;
  string consortiaName = 13;
  int32 claimId = 14;
  string claimName = 15;
  int32 grades = 16;
  int32 gp = 17;
  int32 repute = 18;
  int32 consortiaOffer = 19;
  string strategy = 20;
  int32 weary = 21;
  int32 attackLeftCount = 22;
  int32 noviceProcess = 23;
  int32 consortiaAttack = 24;
  int32 consortiaDefence = 25;
  int32 consortiaAgility = 26;
  int32 consortiaAbility = 27;
  int32 consortiaCaptain = 28;
  int32 gpOrder = 29;
  int32 fightingCapacity = 30;
  string gradeProcess = 31;
  int32 timeProcess = 32;
  bool timeGet = 33;
  string campaignSite = 34;
  int32 bagCount = 35;
  int32 matchWin = 36;
  int32 matchFailed = 37;
  int32 consortiaGold = 38;
  int32 consortiaPhysique = 39;
  int32 right = 40;
  int32 job = 41;
  int32 leedProcess = 42;
  int32 starCount = 43;
  string signDate = 44;
  int32 signTimes = 45;
  int32 signSite = 46;
  string order = 47;
  int32 startFree = 48;
  string totalGp = 49;
  bool refuseFriend = 50;
  bool refuseInvite = 51;
  int32 consortiaTotaloffer = 52;
  bool showVersion = 53;
  int32 campaignCount = 54;
  int32 timeRun = 55;
  int32 qteGuide = 56;
  int32 starpoint = 57;
  bool isAuto = 58;
  string lastOutConsortia = 59;
  int32 geste = 60;
  int32 storeGrade = 61;
  int32 storeGp = 62;
  int32 reloginProcess = 63;
  int32 reloginCount = 64;
  int32 blessingCount = 65;
  int32 blessingBuff = 66;
  int32 blessingMaxCount = 67;
  bool firstCharge = 68;
  int32 charm = 69;
  int32 matchRoomCount = 70;
  bool kingBuff = 71;
  int32 leaveGp = 72;
  int32 altarConsortiaId = 73;
  string serverName = 74;
  int32 rewardTimes = 75;
  int32 warFieldCount = 76;
  int32 trialCount = 77;
  int32 appellId = 78;
  int32 crossScore = 79;
  int32 trialMaxCount = 80;
  int32 wearyLimit = 81;
  int32 lordsScore = 82;
  bool isReceived = 83;
  int32 mineScore = 84;
  bool isBackPlayer = 85;
  bool refuseTeamInvite = 86;
  int32 campaignMaxcount = 87;
  int32 hasVicePassword = 88;
  int32 isDuringToResetTime = 89;
  string signRewardState = 90;
  int32 weekActive = 91;
  int32 freeGradeSite = 92;
  int32 buyGradeSite = 93;
  bool isTargetOpen = 94;
  bool isSignOpen = 95;
  int32 sonNoviceProcess = 96;
  bool refuseFamInvite = 97;
  bool refuseLookInfo = 98;
  bool refuseConsortiaInvite = 99;
  bool receivePushMsg = 100;
  bool mbSetingTK = 101;
  bool mbSetingYW = 102;
  bool mbSetingFB = 103;
  bool mbSetingHD = 104;
  bool mbSetingZD = 105;
  bool mbSetingDW = 106;
  bool pushFarm = 107;
  bool pushWorldBoss = 108;
  bool pushGuildTree = 109;
  bool pushGuildWar = 110;
  bool pushMultiCamp = 111;
  bool pushBuildingOrder = 112;
  bool pushTempleReward = 113;
  bool isShowOpenAll = 114;
  string teamQChat = 115;
  string battleQChat = 116;
  bool isPassOpen = 117;
  int32 bossScore = 118;
  int32 runeCount = 119;
  int32 runePowerPoint = 120;
  string translateLan = 121;
  string onlineTime = 122;
  int32 petEquipStrengNum = 123;
  int32 petBagCount = 124;
  int32 terraTempleCount = 125;
  int32 terraTempleMaxCount = 126;
  int32 magicCardBagCount = 127;
  int32 addGuildCount = 128;
  string lastFreeSkillLearnTime = 129;
  int32 mulSportScore = 130;
  int32 segmentId = 131;
  int32 runeNum = 132;
  bool autoRecruit = 133;
  bool isBindVertifyPrompted = 134;
  string newNoviceProcess = 135;
  string createTime = 136;
  int32 guildDuty = 137;
  int32 consortiaBuild = 138;
  int32 consortiaTotalBuild = 139;
  repeated int32 hiSkillList = 140;
  string nuid = 141;
}
