syntax = "proto3";

package com.road.yishi.proto.simple;

message SimpleHeroMsg {
  int32 heroId = 1;
  string nickName = 2;
  int32 tempateId = 3;
  int32 playerId = 4;
  int32 totalPower = 5;
  int32 totalAgility = 6;
  int32 totalIntellect = 7;
  int32 totalCaptain = 8;
  int32 totalPhysique = 9;
  int32 totalPhyAttack = 10;
  int32 totalPhyDefence = 11;
  int32 totalMagicAttack = 12;
  int32 totalMagicDefence = 13;
  int32 totalForceHit = 14;
  int32 totalParry = 15;
  int32 totalConatArmy = 16;
  int32 totalLive = 17;
  int32 remainPoint = 18;
  int32 skillPoint = 19;
  string skillScript = 20;
  string bagJoin = 21;
  string consortiaJoin = 22;
  string fastKey = 23;
  int32 hp = 24;
  int32 blood = 25;
  int32 bloodId = 26;
  int32 basePower = 27;
  int32 baseAgility = 28;
  int32 baseIntellect = 29;
  int32 baseCaptain = 30;
  int32 basePhysique = 31;
  int32 basePhyAttack = 32;
  int32 basePhyDefence = 33;
  int32 baseMagicAttack = 34;
  int32 baseMagicDefence = 35;
  int32 baseForceHit = 36;
  int32 baseParry = 37;
  int32 baseConatArmy = 38;
  int32 baseLive = 39;
  int32 powerPoint = 40;
  int32 agilityPoint = 41;
  int32 intellectPoint = 42;
  int32 captainPoint = 43;
  int32 physiquePoint = 44;
  int32 skillIndex = 45;
  bool isActiveSecond = 46;
  int32 headId = 47;
  int32 totalGeste = 48;
  int32 totalCharm = 49;
  int32 fireResi = 50;
  int32 waterResi = 51;
  int32 electResi = 52;
  int32 windResi = 53;
  int32 darkResi = 54;
  int32 lightResi = 55;
  int32 reduceResi = 56;
  int32 totalStrength = 57;
  int32 baseStrength = 58;
  int32 totalTenacity = 59;
  int32 baseTenacity = 60;
  int32 fashionAddPower = 61;
  int32 fashionAddArmor = 62;
  int32 fashionAddIntellect = 63;
  int32 fashionAddLife = 64;
  int32 fashionWing = 65;
  int32 fashionHat = 66;
  int32 fashionCloth = 67;
  int32 fashionArm = 68;
  int32 fashionGp = 69;
  int32 fashionGrades = 70;
}
